--- a/styles/style.css
+++ b/styles/style.css
@@ -241,7 +241,7 @@ body {
 }
 
 .hp_fv_btn::before {
-  content: url(/images/fv_icon.png);
+  content: url(../images/fv_icon.png);
   position: absolute;
   top: 2px;
   left: 88px;
